--- a/main.css
+++ b/main.css
@@ -41,9 +41,11 @@
 
 .mycard {
     max-width: calc(100vw - 10px);
-  
 }
 
+p{
+  font-family: Roboto;
+}
 .profile {
   height: 100%;
   width: 33%;
@@ -66,9 +68,10 @@ body {
   height: 100vh;
   color: lightgoldenrodyellow;
 }
-#nametitle,#profession{
+#nametitle{
   text-transform: uppercase;
-  letter-spacing: 1.5px;
+  letter-spacing: 2px;
+  font-size: 30px;
   
 }
 #name{
@@ -77,7 +80,9 @@ body {
 }
 #nametitle,#profession, #location{
 text-align: center;
+  font-family: "Dancing Script"
 }
+
 #contactlinks {
   text-align: center;
 }
@@ -96,9 +101,29 @@ li {
 }
 
 .photo {
-    display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-  margin-top: 60px;
+  display: block;
+  margin-left: 70px;
+  margin-right: 50px;
+  margin-top: 50px;
+  position: relative;
+}
+
+.photo:hover .fun{
+  display: block;
+}
+
+.photo .fun{
+  position: absolute;
+  left: 0;
+  top: 0;
+  display: none;
+  
+}
+img{
+  height: 272px;
+  width: 185px;
+}
+
+#profession {
+  font-size: 20px;
 }
